# clippy

./: FRONTEND_STORAGE_CONFIG.md  QUICK_START_SYNC.md  README.md  STORAGE_ENGINE.md  SYNC_ARCHITECTURE.md  SYNC_IMPLEMENTATION_SUMMARY.md  package-lock.json  package.json  tailwind.config.js  test_cos_connection.py
examples/: storage_config_examples.json  sync_demo.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  storage.rs  storage_adapter.rs  sync.rs
src/components/: ClipboardManager.tsx  ConfigGuide.tsx  StorageConfig.tsx
src/components/ui/: alert.tsx  badge.tsx  label.tsx  select.tsx  tabs.tsx
