[package]
name = "clippy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clippy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clipboard-rs = "0.2.4"
tokio = { version = "1", features = ["sync", "time", "rt", "fs"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
infer = "0.16"
opendal = { version = "0.49", features = ["services-fs", "services-s3", "services-oss", "services-cos", "services-azblob"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"

